<resources>
    <string name="app_name">Sanz Mikva Worker</string>
    <string name="_1">1</string>
    <string name="app_id">001</string>
    <string name="reception">Reception</string>
    <string name="room_12">Room 12</string>
    <string name="pool_3">pool 3</string>
    <string name="room_8">Room 8</string>
    <string name="pool_2">pool 2</string>
    <string name="room_5">Room 5</string>
    <string name="pool_1">pool 1</string>
    <string name="room_1">Room 1</string>
    <string name="room_2">Room 2</string>
    <string name="room_11">Room 11</string>
    <string name="room_10">Room 10</string>
    <string name="room_9">Room 9</string>
    <string name="room_7">Room 7</string>
    <string name="room_4">Room 4</string>
    <string name="next_room_help">Next Room Number for Help :</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="entrance">Entrance</string>
    <string name="room_14">Room 14</string>
    <string name="room_13">Room 13</string>
    <string name="room_18">Room 18</string>
    <string name="room_17">Room 17</string>
    <string name="room_16">Room 16</string>
    <string name="room_15">Room 15</string>
    <string name="room_6">Room 6</string>
    <string name="room_3">Room 3</string>

    <string name="str_room_no">Room No</string>
    <string name="str_start_date">Start Date</string>
    <string name="str_end_date">End Date</string>
    <string name="str_date">Date</string>
    <string name="str_status">Status</string>
</resources>
